--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -56,6 +56,7 @@ jobs:
         run: cp ./build/launch4j/Stirling-PDF.exe ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
       - name: Upload Assets exe binarie
+        id: upload-exe
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           path: ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
@@ -68,6 +69,7 @@ jobs:
         run: cp ./build/libs/Stirling-PDF-${{ steps.versionNumber.outputs.versionNumber }}.jar ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
       - name: Upload Assets jar binaries
+        id: upload-jar
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           path: ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
@@ -80,6 +82,7 @@ jobs:
         id: attestation-exe
         uses: actions/attest-build-provenance@7668571508540a607bdfd90a87a560489fe372eb # v2.1.0
         with:
+          subject-digest: sha256:${{ steps.upload-exe.outputs.artifact-digest }}
           subject-path: ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
       - name: Debug exe attestation output
@@ -91,6 +94,7 @@ jobs:
         id: attestation-jar
         uses: actions/attest-build-provenance@7668571508540a607bdfd90a87a560489fe372eb # v2.1.0
         with:
+          subject-digest: sha256:${{ steps.upload-jar.outputs.artifact-digest }}
           subject-path: ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
       - name: Debug jar attestation output
