--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -98,6 +98,7 @@ jobs:
           cosign attest-blob \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
+            --predicate predicate.json \
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar \
             > ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.attestation.jsonl
 
@@ -108,6 +109,7 @@ jobs:
           cosign attest-blob \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
+            --predicate predicate.json \
             ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe \
             > ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe.attestation.jsonl
 
