--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -116,14 +116,14 @@ jobs:
             > ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe.attestation.jsonl
 
 
-      # - name: Upload binaries and signatures to release
-      #   uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
-      #   with:
-      #     tag_name: v${{ steps.versionNumber.outputs.versionNumber }}
-      #     files: |
-      #       ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
-      #       ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig
-      #       ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.attestation.jsonl
-      #       ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
-      #       ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe.sig
-      #       ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe.attestation.jsonl
+      - name: Upload binaries and signatures to release
+        uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
+        with:
+          tag_name: v${{ steps.versionNumber.outputs.versionNumber }}
+          files: |
+            ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
+            ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig
+            ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.attestation.jsonl
+            ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe
+            ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe.sig
+            ./build/launch4j/Stirling-PDF${{ matrix.file_suffix }}.exe.attestation.jsonl
