--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Sign JAR with Cosign OIDC
         run: |
-          cosign verify \
+          cosign verify-blob \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
             --output-certificate ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.pem \
@@ -73,7 +73,7 @@ jobs:
 
       - name: Sign EXE with Cosign OIDC
         run: |
-          cosign verify  \
+          cosign verify-blob  \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
             --output-certificate ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.pem \
