--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Sign JAR with Cosign OIDC
         run: |
           cosign verify-blob \
-            --oidc-issuer https://token.actions.githubusercontent.com \
+            --certificate-oidc-issuer https://token.actions.githubusercontent.com \
             --output-certificate ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.pem \
             --output-signature ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig \
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
@@ -73,7 +73,7 @@ jobs:
       - name: Sign EXE with Cosign OIDC
         run: |
           cosign verify-blob  \
-            --oidc-issuer https://token.actions.githubusercontent.com \
+            --certificate-oidc-issuer https://token.actions.githubusercontent.com \
             --output-certificate ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.pem \
             --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
