--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -66,6 +66,7 @@ jobs:
         run: |
           cosign verify-blob \
             --certificate-oidc-issuer https://token.actions.githubusercontent.com \
+            --certificate-identity-regexp https://github.com/Ludy87/test_java/.github/workflows/ \
             --certificate ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.pem \
             --signature ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig \
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
@@ -74,6 +75,7 @@ jobs:
         run: |
           cosign verify-blob  \
             --certificate-oidc-issuer https://token.actions.githubusercontent.com \
+            --certificate-identity-regexp https://github.com/Ludy87/test_java/.github/workflows/ \
             --certificate ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.pem \
             --signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
