--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -62,25 +62,25 @@ jobs:
       - name: Install Cosign
         uses: sigstore/cosign-installer@dc72c7d5c4d10cd6bcb8cf6e3fd625a9e5e537da # v3.7.0
 
-      - name: Sign JAR with Cosign OIDC
-        run: |
-          cosign sign-blob \
-            --yes \
-            --oidc-client-id sigstore \
-            --oidc-issuer https://token.actions.githubusercontent.com \
-            --output-signature ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig \
-            --output-certificate ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.pem \
-            ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
+      # - name: Sign JAR with Cosign OIDC
+      #   run: |
+      #     cosign sign-blob \
+      #       --yes \
+      #       --oidc-client-id sigstore \
+      #       --oidc-issuer https://token.actions.githubusercontent.com \
+      #       --output-signature ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig \
+      #       --output-certificate ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.pem \
+      #       ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
-      - name: Sign EXE with Cosign OIDC
-        run: |
-          cosign sign-blob  \
-            --yes \
-            --oidc-client-id sigstore \
-            --oidc-issuer https://token.actions.githubusercontent.com \
-            --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
-            --output-certificate ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.pem \
-            ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
+      # - name: Sign EXE with Cosign OIDC
+      #   run: |
+      #     cosign sign-blob  \
+      #       --yes \
+      #       --oidc-client-id sigstore \
+      #       --oidc-issuer https://token.actions.githubusercontent.com \
+      #       --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
+      #       --output-certificate ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.pem \
+      #       ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
       - name: Generate Attestations for JAR
         run: |
@@ -89,6 +89,7 @@ jobs:
             --yes \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
+            --output-signature ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.sig \
             --output-attestation ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar.intoto.jsonl \
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.jar
 
@@ -99,6 +100,7 @@ jobs:
             --yes \
             --oidc-client-id sigstore \
             --oidc-issuer https://token.actions.githubusercontent.com \
+            --output-signature ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.sig \
             --output-attestation ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe.intoto.jsonl \
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
