--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -12,7 +12,7 @@ jobs:
   push:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      # contents: write
       packages: write
       id-token: write
       attestations: write
