--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -13,7 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      # packages: write
       id-token: write
       attestations: write
     strategy:
@@ -105,9 +104,14 @@ jobs:
             ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.exe
 
       - name: Upload binaries, attestations and signatures to release
-        uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
-        with:
-          tag_name: v${{ steps.versionNumber.outputs.versionNumber }}
-          files: |
-            ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.*
-            ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
+        run: gh release upload ${{ github.ref }} ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.* ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Upload binaries, attestations and signatures to release
+      #   uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
+      #   with:
+      #     tag_name: v${{ steps.versionNumber.outputs.versionNumber }}
+      #     files: |
+      #       ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.*
+      #       ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
