--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -113,12 +113,14 @@ jobs:
 
       - name: Create Tag
         run: git tag -a v${{ steps.versionNumber.outputs.versionNumber }} -m "Automated Release" && git push origin v${{ steps.versionNumber.outputs.versionNumber }}
+        continue-on-error: true
 
       - name: Create Release if not exists
         run: gh release create v${{ steps.versionNumber.outputs.versionNumber }} --title "Release v${{ steps.versionNumber.outputs.versionNumber }}" --notes "Automated release of version v${{ steps.versionNumber.outputs.versionNumber }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+        continue-on-error: true
+
       - name: Upload binaries, attestations and signatures to release
         run: gh release upload v${{ steps.versionNumber.outputs.versionNumber }} ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.* ./build/launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
         env:
